[package]
name = "hf2-cli"
version = "0.3.3"
authors = ["Jacob Rosenthal <@jacobrosenthal>"]
edition = "2018"
description = "CLI for Microsoft HID Flashing Library for UF2 Bootloaders"
repository = "https://github.com/jacobrosenthal/hf2-rs"
keywords = ["uf2", "makecode", "adafruit", "hid", "flash"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license = "MIT/Apache-2.0"
readme = "readme.md"

[dependencies]
structopt = "0.3.2"
hf2 = { version = "^0.3.0", path = "../hf2" }
hidapi = "1.2.1"
pretty_env_logger = "0.4.0"
maplit = "1.0.2"
crc-any = { version = "2.2.3", default-features = false }
log = "0.4.6"

[[bin]]
name = "hf2"
path = "src/main.rs"
