[package]
name = "hf2"
version = "0.2.0"
authors = ["Jacob Rosenthal <@jacobrosenthal>"]
edition = "2018"
description = "Microsoft HID Flashing Library for UF2 Bootloaders"
repository = "https://github.com/jacobrosenthal/hf2-rs"
keywords = ["uf2", "makecode", "adafruit", "hid", "flash"]
license = "MIT/Apache-2.0"
readme = "readme.md"

[features]
default = ["hidapi"]

[dependencies]
scroll = { version = "0.10.1" }
log = "0.4.11"
hidapi = { version = "1.2.3", optional = true }
